tests/golden/type_errors/namespace_import_no_top_level_pollution.cd
import "../namespace_import_value/lib.cd" as lib;
print value;
