tests/golden/type_errors/namespace_import_no_top_level_pollution.err
Type error at <repo>/tests/golden/type_errors/namespace_import_no_top_level_pollution.cd:2:7: undefined variable `value`
  print value;
        ^
